--- a/sendy-legacy-api/src/main/resources/application-prd.yml
+++ b/sendy-legacy-api/src/main/resources/application-prd.yml
@@ -29,6 +29,9 @@ spring:
     hibernate:
       ddl-auto: validate
     open-in-view: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
 
   mail:
     host: smtp.gmail.com
