--- a/sendy-transfer-producer/src/main/resources/application-prd.yml
+++ b/sendy-transfer-producer/src/main/resources/application-prd.yml
@@ -10,6 +10,13 @@ spring:
       driver-class-name: com.mysql.cj.jdbc.Driver
       username: ${SPRING_DATASOURCE_USERNAME:sendy_master}
       password: ${SPRING_DATASOURCE_PASSWORD:sendy_master}
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    open-in-view: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
   kafka:
     consumer:
       group-id: ${SPRING_KAFKA_CONSUMER_GROUP_ID}
